--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,25 @@
 		  <artifactId>mybatis-generator-core</artifactId>
 		  <version>1.3.7</version>
 	  </dependency>
+
+	  <!-- spring-redis实现 -->
+	  <dependency>
+		  <groupId>org.springframework.data</groupId>
+		  <artifactId>spring-data-redis</artifactId>
+		  <version>1.6.2.RELEASE</version>
+	  </dependency>
+	  <!-- redis客户端jar -->
+	  <dependency>
+		  <groupId>redis.clients</groupId>
+		  <artifactId>jedis</artifactId>
+		  <version>2.8.0</version>
+	  </dependency>
+	  <!-- Ehcache实现,用于参考 -->
+	  <dependency>
+		  <groupId>org.mybatis</groupId>
+		  <artifactId>mybatis-ehcache</artifactId>
+		  <version>1.0.0</version>
+	  </dependency>
   </dependencies>
   <build>
     <finalName>springmvc_spring_mybatis</finalName>
