--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,16 @@ mysql.driver.class=com.mysql.jdbc.Driver
 mysql.jdbc.url=jdbc:mysql://localhost:3306/project
 mysql.user=root
 mysql.password=root
+
+
+#服务器主机名 smtp.xx.com
+mail.smtp.host=smtp.163.com
+mail.smtp.username=m18435186589_1@163.com
+#密码/客户端授权码
+mail.smtp.password=gl930517
+#编码字符
+mail.smtp.defaultEncoding=utf-8
+#是否进行用户名密码校验
+mail.smtp.auth=true
+#设置超时时间
+mail.smtp.timeout=20000
