权限管理  乱码问题解决

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>springmvc01</display-name>
+  <display-name>mProject</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -24,14 +24,13 @@
   	<servlet-name>default</servlet-name>
   	<url-pattern>/assets/*</url-pattern>
   </servlet-mapping>
-
     <filter>
         <filter-name>myFilter</filter-name>
         <filter-class>cn.edu.nuc.ssm.filter.MyFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>myFilter</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
   <filter>
   	<filter-name>method</filter-name>
@@ -39,7 +38,7 @@
   </filter>
   <filter-mapping>
   	<filter-name>method</filter-name>
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
   <filter>
@@ -60,8 +59,10 @@
   </filter>
   <filter-mapping>
   	<filter-name>encoding</filter-name>
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>/*</url-pattern>
   </filter-mapping>
+
+
   <!-- springmvc容器 -->
   <servlet>
   	<servlet-name>ssm</servlet-name>
