--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,7 +3,7 @@ mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&amp;failOv
 mysql.user=root
 mysql.password=root
 
-
+#mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&useUnicode=true&characterEncoding=utf8&amp;failOverReadOnly=false
 #服务器主机名 smtp.xx.com
 mail.smtp.host=smtp.163.com
 mail.smtp.username=m18435186589_1@163.com
