权限管理  优化

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 mysql.driver.class=com.mysql.jdbc.Driver
-mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&amp;failOverReadOnly=false
+mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&useUnicode=true&characterEncoding=utf8&amp;failOverReadOnly=false
+#mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&amp;failOverReadOnly=false
 mysql.user=root
 mysql.password=root
 
-#mysql.jdbc.url=jdbc:mysql://localhost:3306/project?autoReconnect=true&useUnicode=true&characterEncoding=utf8&amp;failOverReadOnly=false
 #服务器主机名 smtp.xx.com
 mail.smtp.host=smtp.163.com
 mail.smtp.username=m18435186589_1@163.com
